--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My project</title>
   </head>
   <body>
 
   </body>
 </html>
+  
