--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <title>My project</title>
+<link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
 
