--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!-- Write your HTML in this file -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>My project</title>
-<link rel="stylesheet" href="/css/master.css">
+<link rel="stylesheet" href="/style.css">
   </head>
   <body>
 
